# cyberswiss

./: .env.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 48604da8969b_fase_6_mitre_techniques_en_findings.py  831ef33f0d6a_fase_1_users_engagements_scopes_notes.py  841865bad049_fase_2_jobs_y_targets.py  9b1a39cffecb_fase_6_escaneos_recurrentes.py  a8913cfbabc8_fase_3_pipeline_runs.py  c084543f18b9_fase_5_reportes.py  f449f824bb08_fase_4_findings_y_knowledge_documents.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: auth.py  engagements.py  findings.py  jobs.py  knowledge.py  notes.py  pipelines.py  reports.py  scheduled_scans.py  scopes.py  targets.py  tools.py  ws_logs.py
backend/app/core/: config.py  docker_runner.py  security.py
backend/app/db/: session.py
backend/app/knowledge/: mitre.py  taxonomy.py
backend/app/models/: __init__.py  engagement.py  finding.py  job.py  knowledge_document.py  note.py  pipeline_run.py  report.py  scheduled_scan.py  scope.py  target.py  user.py
backend/app/pipelines/: base.py  definitions.py  engine.py
backend/app/reports/: generator.py
backend/app/schemas/: auth.py  engagement.py  finding.py  job.py  knowledge_document.py  note.py  pipeline_run.py  report.py  scheduled_scan.py  scope.py  target.py
backend/app/tools/: __init__.py  base.py  registry.py
backend/app/workers/: actors.py  broker.py  knowledge_actors.py  scheduler.py
frontend/: Dockerfile  (+3 more)
(+43 files in other folders)
