[project]
name = "cyberswiss-backend"
version = "0.1.0"
description = "Backend de cyberswiss: suite de pentesting/red team self-hosted"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.35",
    "asyncpg>=0.30.0",
    "alembic>=1.13.0",
    "pydantic[email]>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    "redis>=5.0.0",
    "dramatiq[redis]>=1.17.0",
    "docker>=7.1.0",
    "pdfplumber>=0.11.0",
    "weasyprint>=62.0",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.9",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
